Using the Search Menu (Spacebar) outside the 3D View can cause crashes, mouse pointer capture in certain cases #48300

Closed
opened 2016-04-28 14:02:09 +02:00 by Vuk Gardašević · 5 comments

Tested on: AMD X3 455, 8gig ram, R7 360
Loaded Factory Settings

Windows 7, Proprietary Driver 16.150.0.0
Blender Versions : 2.57a, 2.70a, 32e2036

Linux:
Ubuntu 16.04 LTS, Mesa 11.2.0
Blender Version : 2b485e2

Xubuntu 15.10, Proprietary Driver 15.201.1151
Blender Version : 2683dd8

Calling the Search menu (Spacebar) outside 3D View will give options that can cause crashes and capturing the mouse in the active editor (where the cursor was) depending on the context and tool selected.

2.77a_bug.jpg

In this case, while the 3D view is in Edit Mode, placing the cursor in the timeline and searching (by pressing the spacebar) for certain mesh edit tools will crash Blender - for instance: Bevel, Screw, Spin, Inset if any of the faces, vertices or edges are selected. If there is no active selection in the Edit mode - nothing happens.

However, sometimes the crash will happen even if nothing is selected like Duplicate and Extrude at 3D cursor.

Some other tools will work, while some of them (like Extrude, To Sphere, Translate, Resize and Rotate - those that use controling the values with moving the mouse around) will capture the mouse in the Window (in this example the Timeline) until left or right click.

search_context.jpg

Depending on the 3D View window context - if the tool isn't available in it it will do nothing. For instance : If the 3D View is in Sculpt Mode calling any of the Transforms will not capture the mouse but it will in Object Mode.

The bug is present in 2.57a. Dew to some tools working differently (no Bevel etc.) it is triggered by some other searches like Duplicate and Extrude at 3D cursor.

2-57a-bug.jpg

Tested on: AMD X3 455, 8gig ram, R7 360 Loaded Factory Settings **Windows 7**, Proprietary Driver 16.150.0.0 Blender Versions : 2.57a, 2.70a, 32e2036 **Linux**: Ubuntu 16.04 LTS, Mesa 11.2.0 Blender Version : 2b485e2 Xubuntu 15.10, Proprietary Driver 15.201.1151 Blender Version : 2683dd8 Calling the Search menu (Spacebar) outside 3D View will give options that can cause crashes and capturing the mouse in the active editor (where the cursor was) depending on the context and tool selected. ![2.77a_bug.jpg](https://archive.blender.org/developer/F307505/2.77a_bug.jpg) In this case, while the 3D view is in Edit Mode, placing the cursor in the timeline and searching (by pressing the spacebar) for certain mesh edit tools will crash Blender - for instance: Bevel, Screw, Spin, Inset if any of the faces, vertices or edges are selected. If there is no active selection in the Edit mode - nothing happens. However, sometimes the crash will happen even if nothing is selected like Duplicate and Extrude at 3D cursor. Some other tools will work, while some of them (like Extrude, To Sphere, Translate, Resize and Rotate - those that use controling the values with moving the mouse around) will capture the mouse in the Window (in this example the Timeline) until left or right click. ![search_context.jpg](https://archive.blender.org/developer/F307502/search_context.jpg) Depending on the 3D View window context - if the tool isn't available in it it will do nothing. For instance : If the 3D View is in Sculpt Mode calling any of the Transforms will not capture the mouse but it will in Object Mode. The bug is present in 2.57a. Dew to some tools working differently (no Bevel etc.) it is triggered by some other searches like Duplicate and Extrude at 3D cursor. ![2-57a-bug.jpg](https://archive.blender.org/developer/F307494/2-57a-bug.jpg)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by a48d740798

This issue was referenced by a48d7407986d04492107a2ef16d0ff6f0d012c45
Author
Member

Thanks for fixing the issues so quickly, but I'm afraid I've found two more cases. :(

Build: 636195e , Win7, Loaded Factory settings

Edit mode select vertices (faces or edges) >Change the Timeline to the Node Editor> With the cursor over the Node Editor call Search Menu and search for Edge Bevel Weight or Edge Crease > The tweak with the arrow and dotted lines will show up> Left or Right click will crash Blender.

This problem doesn't show up in the timeline (Tested some other ones but they didn't trigger the bug) - nothing happens but it crashes in the Node Editor.

Thanks for fixing the issues so quickly, but I'm afraid I've found two more cases. :( Build: 636195e , Win7, Loaded Factory settings Edit mode select vertices (faces or edges) >Change the Timeline to the Node Editor> With the cursor over the Node Editor call Search Menu and search for **Edge Bevel Weight** or **Edge Crease** > The tweak with the arrow and dotted lines will show up> Left or Right click will crash Blender. This problem doesn't show up in the timeline (Tested some other ones but they didn't trigger the bug) - nothing happens but it crashes in the Node Editor.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48300
No description provided.