Fix T48300: 3D view tools outside the 3d view crash